--- a/src/content/posts/translations/alexandrian-hexcrawl-1.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-1.mdx
@@ -1,5 +1,5 @@
 ---
-title: "#Теория — Александрийский Hexcrawl, ч.5"
+title: "#Теория — Александрийский Hexcrawl, ч.1"
 description: "Перевод цикла статей Александриана про процедуру исследования гексов в третьей редакции D&D #alexandrian #hexcrawl #dnd3e #translate"
 date: 2023-09-18
 tags:
@@ -13,3 +13,16 @@ author: Justin Alexander
 translator: pnprpg.ru
 cover: ~assets/covers/the_alexandrian_splashes.png
 ---
+
+КРАТКИЙ ЭКСКУРС
+ Ранее, в статьях об игровых структурах я уже описывал основны Hexcrawl:
+Рисуется карта состоящая из шестиугольных участков(далее – “гексов”). В самом простом случае, достаточно чтобы каждый гекс наглядно изображал тот тип местности, который в нём преобладает и каждый из шестиугольников был должным образом пронумерован (по порядку или по методу координатной сетки). Важные детали, типа поселений, подземелий, рек, дорог и политических меток обычно также наглядно представлены на карте.
+Прописывается легенда (документация) карты – Опираясь на нумерацию, к гексам привязываются какие-либо события или описания местности (при этом, все-все гексы прописывать не обязательно).
+Где-нибудь заимствуется или создаётся механика, которая описывает процесс перемещения героев через просторы игрового мира. Определяется отправная точка-гекс путешествия и отмечается на карте маршрут героев, начиная с этого гекса.
+Когда герои входят в новый гекс, Ведущий рассказывает игрокам об изменениях ландшафта и/или запускает события, которые указаны в легенде карты для этого гекса: герои переживают прописанные события, встречаются с монстрами или просто любуются пейзажем.
+Hexcrawl первоначально являлся одним из основных компонентов настольных ролевых игр, но постепенно был забыт, и уже в 1989-м году карты-из-шестиугольников лишь изредка встречались среди публикуемых игровых продуктов. Затем вторая редакция D&D вовсе исключила Hexcrawl из своих книг правил, и так продолжалось до тех пор, пока Necromancer Games в 2005 не переиздала “Wilderness of High Fantasy”, а Бен Роббинс не написал поистине вирусный обзор своих “Западных пределов”, который наконец вернул людям интерес к позабытому искусству исследования гексов. Ранее, в процессе моих рассуждений об игровых структурах, я уже упоминал, что придумал и испытал на своих игроках собственную отказоустойчивую структуру Hexcrawl-исследований. С тех пор я получил немало личных просьб поделиться моими правилами. После того как я удовлетворил несколько таких запросов, мне в голову пришла мысль о публикации этих правил и связанных материалов в виде цикла статей. Итак…
+ПРИНЦИПИАЛЬНЫЕ МОМЕНТЫ
+ До того как мы вплотную займёмся собственно Hexcrawl, я хочу осветить цели, которые стояли передо мной, пока разрабатывал свои правила. Во-первых я хочу получить структуру, которая будет полностью скрывать гексы от моих игроков, так как, несмотря на чрезвычайную пользу, которую использование Hexcrawl приносит ведущему (облегчая отслеживание пермещений, привязку событий и т.п.), я убеждён в негативном эффекте переноса всех этих абстракций на сторону игроков: Я желаю чтобы игроки взаимодействовали с миром игры наиболее прямо, явно и с минимальным количеством абстракций. Таким образом я использую правила Hexcrawl в качестве скрытой структуры. Во-вторых, базируясь на первом принципе, все остальные игровые структуры должны быть явно нацелены на исследование игрового мира. Именно этим обусловлено множество правил по определию направления движения, прокладке маршрута, возможности заблудиться и возможности заново найти верный путь: Всё это построено вокруг желания дать игрокам возможность постоянно совершать новые открытия, даже в уже (казалось бы) изученных местах. В-третьих моя система построена предположения, что каждый гекс содержит как минимум один прописанный “объект”. И заметьте, что я говорю “объект”, а не “случайная встреча”.
+Традиционный Hexcrawl обычно включает только прописанные встречи или сценки типа: “Харизматичный музыкант сидит на камне и играет на лютне для группы детей полуросликов. Дети слушают песню про эпические приключения и битвы с орками”.
+Несмотря на то, что в Hexcrawl можно играть с подобной легендой карты, лично я предпочитаю привязывать к гексу содержимое, которое может быть использовано неоднократно, при повторном посещении гекса (особенно это полезно для игр в формате “открытого стола”). Другими словами, по моему, легенда карты долждна быть географической а не событийной (автор ещё раскроет эту мысл позже — прим. пер.). В-четвёртых для достижения всех вышеозначенных целей (скрыть механику гексов, подержать исследование и обеспечить повторное использование), я намерен сделать неоднозначным срабатывание/обнаружение прописанного содержимого гекса (вместо автоматического срабатывания сценариев из оригинальных правил Hexcrawl).
+Более того, я хочу выработать систему автоматического (с минимальным участием Ведущего – прим. пер.) создания событий и встреч, для упрощения создания игрового контента и, одновременно, замены упразднённых мной событийных элементов легенды карты.
