--- a/src/content/posts/translations/alexandrian-hexcrawl-11.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-11.mdx
@@ -1,5 +1,5 @@
 ---
-title: "#Теория — Александрийский Hexcrawl, ч.3"
+title: "#Теория — Александрийский Hexcrawl, ч.11: Продолжаем наполнять гексы"
 description: "Перевод цикла статей Александриана про процедуру исследования гексов в третьей редакции D&D #alexandrian #hexcrawl #dnd3e #translate"
 date: 2023-09-18
 tags:
@@ -13,3 +13,34 @@ author: Justin Alexander
 translator: pnprpg.ru
 cover: ~assets/covers/the_alexandrian_splashes.png
 ---
+
+5. Импровизация на базе случайностей
+Окай, мы начали наполнять нашу карту, выложив на неё все наши творческие порывы. Затем мы продолжили бесстыдным заимствованием всего, до чего смогли дотянуться. Однако, у нас всё-ещё остались пустые гексы. Что теперь? Теперь нам нужно снова отпустить на волю воображение и позволить ему сломать опустошённую нами ранее коробку из рационального мышления. И существует немало способов сделать это. Самый простой из используемых мной лично — сделать бросок по таблице встреч для данной местности и (очень творчески — прим. пер.) совместить полученный результат с результатом из таблицы случайных сокровищ.
+Для примера:
+Я бросил 1d8 для определения колонки AD&D-таблицы суб-арктических ландшафтов. Я выкинул «6» и это значит «горы».
+Следующий бросок 1d100 дал мне «65», и это — «гигантская сова». Согласно «Бестиарию», гигантские совы обитают группами, в количестве 1d4+1. В моём случае получилось пять сов.
+
+Гигантские совы как правило охраняют сокровища типа «Qx5, X». Я сделал бросок по соответствующей таблице и получил результат «чёрная жемчужина, 500 зм., зелье контроля над человеком и амулет защиты жизни».
+
+Окай. Гекс с которым я вожусь – часть Старого Леса, и выходит примерно следующее…
+
+N7 – Древо Древнего Сыча
+ Гигантское дерево, со стволом более восьмидесяти футов шириной у основания, и с кроной несколько сотен футов в диаметре. Валуны у подножия покрыты множеством резных пиктограмм и странных знаков, перемежающихся со схематичными изображениями сов.
+Зов Сов
+Если кто-либо изобразит крик совы неподалёку от основания ствола, откроется потайная дверь в секретный тоннель, ведущий к полой сердцевине древа.
+Совиный Совет
+Внутри древа на шестах сидят четыре гигантских совы. В случае достойного подношения, эти совы могут сотворить для просителя одно заклинание прорицания один раз в день. За достаточно большое подношение совы предложат просителю оставить броню и оружие. Затем одна из сов, схватив просителя за плечи, поднимет его в расположенное выше большое гнездо, где проситель предстанет перед Древнейшим Сычом.
+Древний Сыч
+Левый глаз Сыча заменяет большая чёрная жемчужина (500 зм.), а на шее покоится амулет Защиты жизни. Древнейший ответит «Да» или «Нет» на один вопрос каждого просителя, так же как если бы это было заклинание «Commune», однако он склонен влюбляться в любые проявления физической (плотской) красоты: если кто-либо из просителей обладает выдающимся очарованием (Харизмой 16+), Древнейший постарается использовать на просителе своё зелье контроля человека для того чтобы приобрести ещё одного симпатичного раба.
+А теперь — к следующему гексу
+Используя аналогичную процедуру я накидал стадо шерстистых носорогов. Они меня не заинтересовали, и я ещё раз повторил бросок. И в вот тут-то у меня получился гиносфинкс с 4000 платиновых слитков, зельем контроля растений, сумкой бобов, опоясанный ремнём украшенным платиновой пряжкой с шестью чёрными сапфирами (3000 зм.). Что бы вы с ним сделали, на моём месте?
+#6. Ответвления сюжетов
+ Вне зависимости от того, как именно и чем именно вы наполняете гексы, вам не стоит забывать про вещи, которые могут быть связаны с уже имеющимся содержимым, описаниями и объектами карты.
+Гоблины и некромантия
+Вот например, у вас есть некромант живущий в Кристальном шпиле, с пачкой гоблинов в услужении, порабощённых при помощи магических рун на обратных сторонах зашитых век. Откуда он взял этих гоблинов? Быть может они из гоблинской в деревеньки неподалёку? Быть может, жители этой деревни чтут и лелеют дерево, приносящее всего один ярко-красный плод каждый год. Быть может этот плод обладает волшебными свойствами и каждый год некромант требует этот плод в обмен на возврат своих гоблинских рабов?
+Бандиты и луки
+Или, вот — вы описываете грот, в котором укрывается множество бандитов. И ещё обстоятельство: все эти бандиты используют мастерски изготовленные (+1) длинные луки. В свою очередь, луки у бандитов есть потому, что бандиты торгуют с одноглазым троллем, который живёт в другой пещере неподалёку. А вход в пещеру тролля преграждает гигантский зелёный кристал торчащий прямо из лесной почвы. Попасть в пещеру можно прикоснувшись к кристаллу, произнеся фразу-пароль и пройдя сквозь него. Сам же хозяин пещеры — троль, давно слывёт великим мастером по части изготовления луков.
+7. Не переутомляйтесь
+Наконец, не бойтесь делать перерывы: посмотрите телевизор, почитайте книжку, пробегитесь по ещё не прочитанным игровым руководствам, включите ваш Play Station Дайте вашему уставшему мозгу возможность передохнуть, и вы увидите, как творческие способности сами-собой начнут восстанвливаться.
+И напоследок
+Напоследок замечу, что всё изложенное выше – далеко не полная палитра и не исчерпывающий каталог тех техник, можно использовать для составления легенды Hexcrawl—карты. Это всего-лишь список того, что лично я использовал при подготовке моей собственной трацианской кампании. %) 
