--- a/src/content/posts/translations/alexandrian-hexcrawl-12.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-12.mdx
@@ -1,5 +1,5 @@
 ---
-title: "#Теория — Александрийский Hexcrawl, ч.3"
+title: "#Теория — Александрийский Hexcrawl, ч.12: За игровым столом"
 description: "Перевод цикла статей Александриана про процедуру исследования гексов в третьей редакции D&D #alexandrian #hexcrawl #dnd3e #translate"
 date: 2023-09-18
 tags:
@@ -13,3 +13,55 @@ author: Justin Alexander
 translator: pnprpg.ru
 cover: ~assets/covers/the_alexandrian_splashes.png
 ---
+
+Сегодня я расскажу вам о том, что происходит за игровым столом, во время игровых встреч моего Трацианского Hexcrawl. Я не до конца уверен в полезности такого описания, но надеюсь, что оно может послужить для вас источником вдохновения. Я также предлагаю рассматривать статью как сокращенную аннотированную запись одной из игр моей кампании, того как я думаю, как я принимаю решения¸ как я произвожу процедуры и использую игровые инструменты.
+Подготовка
+ Я начинаю готовиться за час до начала игры. Моё игровое место – длинный обеденный стол. Я сажусь во главе этого стола и ставлю рядом два складных столика — один справа и один слева от себя.
+Игровые материалы
+На столик справа я кладу папку с общим каталогом описаний гексов и папку с теми описаниями которые не поместились в каталог. Еще одна папка содержит мою ширму ведущего, 4 страницы подсказок, закреплённых на ширме, копию карты кампании и несколько пустых бланков документирования. Карты и несколько бланков я кладу на стол прямо перед собой. Ширму я располагаю на столике слева, а карту кампании — за ширмой.
+Книги правил
+У меня есть несколько печатных копий «OD&D, Vol.1: Men And Magic», которые я раскладываю по столу в зоне игроков. Ещё одну копию, и два других буклета OD&D (Vol.2 и Vol.3) я кладу у себя за ширмой. Помимо того, у меня есть стопка листов с прямоугольной и гексагональной сеткой (в этой же стопке хранятся карты нарисованные самими игроками игроками). Эту стопку я кладу в центр. Ещё у меня есть три папки: одна под бланки описания персонажей, одна под бланки персонажей участвующих в кампании и одна для погибших персонажей. Я просто размещаю эти папки где-нибудь в комнате, так как не часто в них нуждаюсь. Я также распечатываю копию Статусного листа кампании перед каждой игровой встречей и кладу его прямо перед собой. А ещё я не забываю захватить мешочек со всеми нужными игральными костями: 2d4, 6d6, 6d8, 2d10, 2d12, 6d20, дополнительные 6d6 для метания огненных шаров и урона от молнии.
+6d8 нужны мне для того, чтобы откидать все проверки на случайные встречи за день одним броском.
+6d20 – для того чтобы делать много бросков атакующих монстров за один раз, помимо того мои 6d20 рассортированы по трём разным цвета, для простоты группировки монстров по типу.
+
+В начале игры
+Когда начинают приходить игроки, я извлекаю их персонажей из соответствующей папки. В этот момент некоторые игроки выбирают из нескольких своих персонажей того, которым будут играть сегодня.
+
+В этот же момент происходят две вещи:
+Во-первых, я делаю проверки по таблице слухов для каждого из персонажей/героев (но, конечно же, не делаю его для наёмников – персонажей ведущего). Всегда есть 33%-шанс на то, что каждый из героев узнал какой-либо слух. Текущий список слухов является частью бланка состояния кампании. Слухи я создаю исходя из действий героев, случайным образом выбранных номеров гексов и содержимого этих гексов. Во-вторых, я произвожу проверки морали для каждого наёмника. В случае отрицательного результата проверки, я использую таблицу реакций NPC из OD&D для определения дальнейших действий: наёмник может как немедленно покинуть службу, так и потребовать повышения платы. Обычно ни того ни другого не случается — мои игроки уже научились следить за моралью у своих подчинённых. Я всегда поддерживаю актуальность списка наёмников, включающий их показатель морали, в рамка того же бланка состояния. Пока я делаю всё это, игроки занимаются приготовлениями к новому приключению.
+Приготовления обычно включают:
+Дискуссии о цели сегодняшнего путешествия;
+Покупку снаряжения;
+Приобретение услуг новых наёмников;
+Улаживание различных дел, требующих внимания до выступления в поход;
+Если игроки интересуются рынком найма, я предоставляю им простую систему, определяющую сколько наёмников сейчас есть в городе, каких они классов и уровней.
+Обсчёт событий
+После того как игроки закончили с приготовлениями, я беру мои 6d8 и делаю бросок на случайные события: любой регион моей глобальной карты предполагает то или иное случайное событие при единице на d8. Этот бросок представляет собой единовременную проверку на случайные события для каждой из шести вахт первого дня пути. Прочитав результаты броска каждого d8 слева направо, я сразу вижу, в какие вахты произойдёт (или не произойдёт) что-нибудь интересное. Однако, так как я пока не знаю точно где в этот момент будут герои, я не занимаюсь определением того, что именно произойдёт (ведь это сильно зависит от особенностей местности). Однако, именно в этот момент я записываю в учётный лист на какой день/вахту выпадет случайное событие. Набросав таким образом сразу три или четыре дня, я сильно упрощаю свою дальнейшую работу.
+Отмечу, однако, что если мне известно куда именно держат путь герои и где именно они окажутся, я сразу беру таблицы для конкретного региона и создаю нужные события полностью.
+Отступление: География
+ Моя игровая кампания начиналась в городе Мэрнат (гекс O6). Мэрнат – город с длинной историей и столица региона. Он был построен задолго до того, как Герцогства Трации начали свою территориальную экспансию (основав Пограничную Крепость на востоке и деревню дровосеков Кэрдхейм на юге). Старожилы Мэрната имеют некоторые трения с новоприбывшими. Герои моих игроков довольно быстро начали использовать Кэрнхейм (расположенный близ Трацианских Пещер) в качестве базы для своих путешествий, однако с увеличением интереса к Замку Красной Смерти на севере, они всё чаще стали организовывать экспедиции из самого Мэрната. Эти экспедиции, в свою очередь, увеличивали их знания об окружающих областях и исправно служили основой для новых экспедиций.
+Пример экспедиции
+ Итак… Герои покидают город по южному тракту. Они идут налегке (базовая скорость 12 футов) и какое-то время просто движутся по травянистым пустошам, преодолевая 12 миль за вахту.
+Мэрнат расположен чуть южнее центра гекса, так что героям требуется пройти только 4 мили, чтобы покинуть гекс через южную грань.
+В пути они очевидным образом обнаруживают реку, которая пересекает дорогу и уходит направо, в следующий гекс. Сегодня герои собираются пойти по течению реки, и углубиться в чащу Вековечного леса (гекс P7), так что я могу сделать ряд предположений:
+Ожидаемо такой маршрут приведёт их к ближайшей восточной грани гекса (+6 миль) и именно через неё они пройдут в соседний гекс (ещё 6 миль).
+Когда они сойдут с тракта, они все также будут идти через равнинную местность со скоростью 12 миль за вахту.
+Итого: 4 мили (от Мэрната до реки) + 6 миль (из 07 в P6) + 6 миль (из P6 в P7) = 16 миль. Такой результат означает, что герои достигнут края Вековечного леса примерно во втором часу второй вахты, и это обстоятельство суть важно потому, что на вторую вахту в этот день уже назначено случайное событие. Я определяю конкретный момент события внутри вахты бросив 1d8: Результат — тройка, что означает возникновение события почти сразу после входа героев под сень леса.
+Слизистый сюрприз
+1.Во-первых у героев есть 50% шанс, что событие это указанный в описании карты объект. Бросок кубика говорит мне, что сейчас это не так. Однако же… Если бы событию выпало произойти (и герои путешествовали бы по открытой местности), я заглянул бы в каталог описаний гексов и продемонстрировал бы героям объект из соответствующего описания. Продолжим. Группа движется не по открытой местности, а вдоль реки. Так как объект из описания текущего гекса не имеет пометки «у реки», то группой он обнаружен не будет. Но это не помешает мне, в случае успеха проверки на обнаружение подкинуть героям что-либо указывающее на этот объект. Например, прописанный объект этого гекса — Орхэм-холл населён семейством василисков, так что герои заметят следы василиска в иле речной отмели. 2.Во-вторых если герои находятся неподалёку от границы ландшафтного региона, а в данном случае это так, у них есть 50% шанс шанс получить случайное событие из таблицы соседнего региона. 3.Результат броска — 13, и это означает, что им выпало именно такое пограничное событие. 4.Я беру таблицу случайных событий и встреч Векового леса и делаю бросок по ней. Полученный результат означает «слизь» так что я беру дополнительно таблицу слизей, делаю бросок и получаю «серая слизь». В случае слизи нет шансов на обнаружение следов или логова так что я пропускаю этот шаг. После всех приготовлений я понимаю, что серая слизь появится сразу после того как герои пересекут реку и подойдут к опушке леса. Судя по всему, слизь просто будет свисать с одной из веток над рекой, подобно некоей жуткой разновидности испанского мха.
+В глубинах леса
+ После того как герои расправятся со слизью (или отделаются от неё), они смогут продолжить путешествие вдоль реки. Вековечный лес относится типу густых лесов и скорость героев в нём падает до 50%. Они уже преодолели восемь миль за остаток второй вахты и им остаётся пройти ещё 4, для того чтобы достигнуть юго-восточного края гекса P7. Тремя милями вниз, на южном берегу реки они обнаруживают одиноко стоящее дерево c вырезанным на стволе гномским символом «Му». Это дерево уже знакомо героям, более того один их них и вырезал эту метку ранее. Этот знак означает, что Гордур — хорошо укреплённая орочья крепость— расположен всего в нескольких милях на юг отсюда. Гордур не является текущей целью путешествия, так что группа продолжает идти вдоль реки ещё милю и встаёт на ночёвку. На следущий день путешествие продолжается и через две мили приводит к ещё одному дереву со знаком Тод». Этот знак уже означает, что герои находятся чуть севернее гробницы Лян Пьена — конечной цели экспедиции, так что теперь группа сворачивает на юг, в самую глубь Вековечного леса.
+Навигация
+Вот в этот момент и начинаются проверки навигации. Эпикаста, престарелая наёмница, ранее спасенная гномом Энгом из Трацианских пещер, является лучшим навигатор в группе и потому теперь идёт первой.
+Лес здесь густой, так что сложность проверки навигации — 16.
+Эпикаста проваливает проверку (возможно потому что Делмхаст, другой наёмник, пытается навязать ей альтернативный маршрут).
+
+Я бросаю 1d10 для определения отклонения от первоначального маршрута. Результат — 8, и он значит, что путешественники отклонились вправо. Вместо того чтобы следовать на юг, в гекс P8, они движутся на юго-запад к гексу О8.
+
+Что это значит для меня?
+Ну, они вошли в гекс P7 с севера. Вне зависимости от того в какой из гексов (O8 или P8) лежит их путь, они покинут гекс через его дальнюю сторону, и для этого им нужно пройти 12 миль. Они уже преодолели 4 мили по лесу за вторую вахту накануне, 6 миль за первую вахту с утра и войдут в гекс О8 примерно в середине второй вахты второго дня. К этому моменту я уже имею готовое случайное событие для второй вахты, так что я определяю его время — сразу после входа в участок О8. И это, опять же, суть важно, потому что такое время события снова означает обнаружение прописанного объекта.
+Объект О8
+– Я: Через несколько часов марша вы выходите к небольшой прогалине. Переплетённые ветки и мох образовали в центре нечто вроде развалин хижин, покрытых плотным ковром мха. – Энг: Я не помню этого места! – Делмхаст: Я полагаю, эта тысячелетняя дура снова завела нас не туда!
+Найденные хижины оказываются заброшенными и абсолютно пустыми. Уже поздно, так что герои решают встать на ночёвку. Завтра они намереваются вернуться по собственным следам и попытаться понять где именно свернули не туда.
+В заключение
+ Ну вот и всё. С достаточно хорошим описанием карты/гексов и чёткими процедурами/алгоритмами ваше путешествие будет протекать легко и естественно, всё глубже и глубже погружая ваших игроков в тайны неизведанных земель. Это была последняя статья в серии, и она сводит воедино все имеющиеся у меня соображения о практиках Hexcrawl. 
