--- a/src/content/posts/translations/alexandrian-hexcrawl-6.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-6.mdx
@@ -1,5 +1,5 @@
 ---
-title: "#Теория — Александрийский Hexcrawl, ч.5"
+title: "#Теория — Александрийский Hexcrawl, ч.6: Контрольный список вахты"
 description: "Перевод цикла статей Александриана про процедуру исследования гексов в третьей редакции D&D #alexandrian #hexcrawl #dnd3e #translate"
 date: 2023-09-18
 tags:
@@ -13,3 +13,26 @@ author: Justin Alexander
 translator: pnprpg.ru
 cover: ~assets/covers/the_alexandrian_splashes.png
 ---
+
+Этот “контрольный листок” сводит воедино всё ранее изложенное, для упрощения работы с процедурами Hexcrawl. Просто пробегайтесь по ниже приведённым пунктам каждую вахту, в течение которой герои ваших игроков продолжают движение, и эта процедура позволит вам превратить муторную hexcrawl-возню в комфортное скольжение по пространству игры. 
+1.Определите текущее направление движения героев
+См. часть 3
+2.Блуждают ли герои?
+Если группа путешественников не держит путь относительно какого-либо выдающегося ориентира или не движется вдоль естественного/искусственного пути, сделайте проверку Навигации. Если группа провалила проверку и заблудилась, определите новое направление движения по веерной диаграмме (cм. ч.3). Если они уже заблужились ранее, также измените направление, но учтите, что оно может отклоняться только вправо.
+3.Проверка событий и встреч
+Определите момент события/встречи в пределах текущей вахты (бросок 1d8 x 30 минут от начала вахты) и произведите соответствующие броски на вероятность встречи, если Вы не произвели их ранее.
+Совет: Если события произошло ранее последнего получасового отрезка вахты, запишите количество оставшихся (до конца вахты) часов .
+4.Реальная пройденная дистанция
+Бросьте 2d6+3, разделите на 10 и повторно умножьте полученное число на эталонное значение дистанции, которую должна была пройти группа за вахту. (конечный результате этих вычислений и будет “реально пройденной дистанцией” — прим пер.) Сделате проверку Навигации, в том случае, если герои захотят сами определить пройдённое расстояние.
+Совет: Если текущая скорость движения группы ожидаемо приведёт её к выходу из гекса где-нибудь в середине вахты, и это, в свою очередь, приведёт к заметному изменению типа ландшафта, расчитайте среднюю дистанцию преодолеваемую группой за один час (1/4 вахты). Затем, когда группа достигнет края гекса, отметьте количество затраченных героями часов. После этого, опишите ландшафт нового гекса, рассчитайте новое значение реально пройденной дистанции и продолжайте отмечать продвижение группы как обычно.
+Дистанция внутри гекса
+Учтите, что:
+Группе героев потребуется пойти 12 миль, чтобы пройти гекс насквозь, и покинуть его через одну из трёх противоположных точке входа сторон.
+Группе также потребуйте пойти шесть миль, чтобы покинуть гекс через одну из двух ближайших к точке входа сторон (через левую или правую).
+Изменение направления движения внутри гекса приведёт к тому, что группа пройдёт на две мили мили больше.
+6.Выход из гекса
+Определите новый для группы гекс, исходя из (не)изменившегося направления движения группы;
+Если группа блуждает, сделайте проверку Навигации, чтобы понять осознають ли герои свои блуждания;
+Если герои осознали блуждания, они могут попытаться повторно сориентироваться на местности;
+Если попытка ориентирования неудачна, определите для группы новое направление движения, согласно веерной диаграмме (cм. ч.3).
+Примечание: Использование компаса автоматически сбрасывает прогресс броска по диаграмме, даже в том случае, если герои не знают что заблудились.
