--- a/src/content/posts/translations/alexandrian-hexcrawl-7.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-7.mdx
@@ -1,5 +1,5 @@
 ---
-title: "#Теория — Александрийский Hexcrawl, ч.5"
+title: "#Теория — Александрийский Hexcrawl, ч.7: Бланк листа для записей"
 description: "Перевод цикла статей Александриана про процедуру исследования гексов в третьей редакции D&D #alexandrian #hexcrawl #dnd3e #translate"
 date: 2023-09-18
 tags:
@@ -13,3 +13,24 @@ author: Justin Alexander
 translator: pnprpg.ru
 cover: ~assets/covers/the_alexandrian_splashes.png
 ---
+
+Вероятно этот бланк для листа документирования процесса Hexcrawl — не самая красивая вещь из тех, что вы видели (в русской версии мы постарались сделать его чуть-чуть красивее — прим. пер.) Однако я создавал его для чисто практической задачи документирования перемещений героев, и в этом качестве он оказался чрезвычайно полезен.
+Бланк состоит из нескольких частей:
+1.Перечень гексов
+Левая колонка бланка содержит ячейки для записи пройденных группой гексов.
+Записывайте в них текущий день/вахту путешествия (например “3/1” — первая вахта третьего дня) и указывайте в каком гексе находятся герои, а также их направление движения.
+Добавляйте информацию обо всех изменениях в направлении движения и блужданиях, если группа заблудилась.
+Ставьте галочки в чекбоксы за каждую милю продвижения группы внутри гекса.
+Когда чекбоксы текущего гекса заканчиваются, группа покидает гекс.
+Определите их текущее направление движения, если необходимо — рассчитайте отклонение, определите в какой гекс они теперь входят и запишите его код/координаты в следующую строку.
+Повторите вышеописанный цикл.
+2.Список событий
+В целях экономии времени я заранее определяю (по таблице событий) какие встречи/события предстоят героям в пути и записываю их в ячейки правого верхнего блока. Используйте левую колонку блока для отметки того на какой день и вахту приходится событие, записывайте детали этого события в центральную колонку и делайте пометки в двух правых столбцах, если событие сводится к нахождению следа или логова. Если событие — это обнаружение приведённого в описании гекса объекта, просто впишите в центральную ячейку слово “ОБЪЕКТ”.
+3.Порядок движения
+Правая нижняя область бланка схематически изображают коридор подземелья, и на ней вы можете схематически обозначить текущий порядок (кто за кем идёт) движения героев. Да-да, это одинаково хорошо работает и на марше и при обследовании подземелья.
+Вообще этот бланк создавался мной для OD&D 1974-го года издания, и он предполагает, что стандартный 10-футовый коридор может вместить троих героев идущих плечо к плечу. Если вы используйте систему правил, которая позволяет двигаться по аналогичному коридору только по двое в ряд, просто внесите в схему соответствующие изменения.
+4.Список ночных вахт:
+Под разделом порядка движения, расположен список ночных вахт. Я записываю в него кто из героев в какие ночные вахты дежурит.
+Здесь я предполагаю, что герои каждый день движутся в течение двух вахт и отдыхают в течение четырёх.
+5.Базовая скорость движения
+Описывает скорость движения группы. Просто возьмите скорость самого медленного из героев и укажите её здесь. 
