--- a/src/content/posts/translations/alexandrian-hexcrawl-8.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-8.mdx
@@ -1,5 +1,5 @@
 ---
-title: "#Теория — Александрийский Hexcrawl, ч.3"
+title: "#Теория — Александрийский Hexcrawl, ч.8: Примеры описаний гексов"
 description: "Перевод цикла статей Александриана про процедуру исследования гексов в третьей редакции D&D #alexandrian #hexcrawl #dnd3e #translate"
 date: 2023-09-18
 tags:
@@ -13,3 +13,44 @@ author: Justin Alexander
 translator: pnprpg.ru
 cover: ~assets/covers/the_alexandrian_splashes.png
 ---
+
+В процессе подготовки к Hexcrawl-кампании, я придумал отдельную аннотацию для каждого из гексов, и каждая такая аннотации описывала какой-либо объект (именно — «oбъект», а не событие/встречу). Разница между «событием» и «объектом» может быть не вполне очевидна (хотя для русскоязычного читателя, в данном случае, она более чем очевидна – прим. пер.) однако она становится куда яснее, если думать над вопросом достаточно долго:
+Если ваше описание гекса гласит «событие: огр, идущий вдоль дороги», то, ожидаемо, при следующем посещении этого гекса огра здесь уже не будет (его, скорее всего, убьют сами герои). Если же описание выглядит как «объект: огр, живущий в хатке», то даже если герои убьют огра, хатка останется.
+Конечно вы можете сказать, что герои также могут уничтожить и саму хатку, после чего она также исчезнет. Однако основной смысл моего довода все равно сохранится: использование географических/вневременных объектов лучше чем использование каких-либо временных событий.
+Примеры описаний
+ Далее приведу несколько описаний гексов из моих записей о кампании «Трацианский Hexcrawl», в качестве демонстрации разновидностей используемых мной аннотаций. Начнём с самого короткого
+K16 – Медовые пещеры (из «Secrets of Xen’dik»)
+Описание: См. в «Secrets of Xen’dik» Примечание: Здесь всё просто. Я взял уже готовое приключение (из книги «Secrets of Xen’dik») и вставил его в один из гексов. Если герои возьмутся исследовать этот гекс, то я возьму книжку и организую приключение на её основе.
+Обычно я не использую этот способ, так как в последнее время мне неудобно использование готовых приключений на «на лету», даже если эти приключения по-настоящему хороши. Причиной такого неудобства для меня стала привычка авторов приключений размазывать полезную информацию по множеству объёмных подразделов.
+K13 – Руины Ильханского храма
+Вот вам ещё пример. Описание: См. расширенное описание гекса Примечание: Описание этого объекта имеет слишком большой объём, и его не получится разместить в рамках общего перечня гексов.
+Для хранения объёмных текстов я использую отдельную папку-регистратор, и если описание гекса занимает более одной страницы, я сразу подшиваю его в эту папку. Описание развалин Ильханского храма я уже публиковал здесь ранее, и, конечно же, моя заметка в блоге оформлена куда лучше, чем оригинальный документ из папки-регистратора (хотя и предоставляет ровно ту же информацию).
+A3 – Статуя Орлука
+Описание: Гигантская статуя источенная непогодой. Статуя изображает слоноподобного звери с чёрной и жёлтой шерстью — орлука и искусно вырезана из двухцветного (жёлтого и чёрного) гранита. Примечание: Эта статуя представляет собой то что я определяю как «приметные ориентиры». Иногда такие ориентиры скрывают какой-нибудь секрет, но чаще всего это просто примечательные объекты¸ выделяющийся на фоне окружающего ландшафта.
+Вне зависимости от наличия/отсутствия дополнительных характеристик, подобные объекты всегда полезны для героев, в качестве навигационных ориентиров и деталей создаваемых игроками карт.
+N15 – Следы лесного пожара
+Описание: Выжженная пустошь. Фуражировка (охота и собирательство) в этом гексе невозможна. Примечание: Ещё один пример краткого описания. Технически, такой гекс тоже не более чем выдающийся ориентирзанимающий территорию целого гекса.
+C2 – Шахта виверны
+Описание: Шахта глубиной в 60 футов, служащая логовом для виверны. Виверна также прокопала запасной выход, заканчивающийся за холмом, в четверти мили от шахты. Виверна: Шрам от копья уродует левую сторону морды этого свирепого создания. Любой не лишённый ума человек предпочтёт держаться от такой виверны подальше. Сокровища: 7000 зм. 5 цирконов (50 зм. каждый) Примечание: Всего-лишь логово монстра.
+Я обычно даже не рисую карту для подобных объектов, так как меня не затрудняет импровизированное создание подземелий размером менее шести комнат.
+F15 – Скала черепа (у реки)
+ Описание: Обточенный в виде черепа кусок скалы нависает над излучиной реки. Любой пробравшийся сквозь щель между челюстями путешественник обнаружит вход в таинственное захоронение.
+Зона 1
+Мумифицированная голова большого красного дракона. Выдыхает пламя, легко заполняющее большую часть комнаты. Секретный проход в следующую комнату расположен прямо под головой.
+Зона 2
+Пять умертвий (50% всех умертвий в этом подземелье). Не способны выкачивать из героев уровни развития, но активно используют парализующее касание. Обе крупные комнаты-хранилища в этой зоне уже кем-то разграблены.
+Зона 3
+Погребальные подношения: 3000 зм., 3 золотых ожерелья (200 зм. каждое).
+Зона 4
+Коридор с ловушками. Стреломёты в стенах и самовоспламеняющаяся смесь из потолочных отверстий. Комната слева содержит золотую жаровню в виде сидящего на корточках толстяка, стоимостью 7000 зм.
+Зона 5
+Ещё умертвие. Не выкачивает уровни, но легко обнаруживает любую магию/жизнь/существ под заклятием невидимости (чует магию и жаждет пожрать её).
+Зона 6
+Барельеф виде говорящего черепа. Безумен. Задаёт совершенно неочевидные загадки (–Что летает по воздуху? Птица!), и на любой (верный или не верный ответ) выпускает 1d6 волшебных стрел в ответившего.
+Зона 7
+Останки нескольких умертвий.
+Зона 8
+Вампиры со вбитыми в них колами.
+Зона 9
+Прикованный к стене лич. Пурпурные молнии корчат его тело в муках непрерывного страдания. Примечание: Обратите внимание на пометку «у реки» в заголовке описания. Такая пометка говорит нам, что объект расположен у самого берега протекающего через гекс крупного водного потока. Следующие по берегу потока герои автоматически обнаружат описываемый объект.
+Карта этого подземелья взята мной на сайте Дайсона. Не могу не отметить, что его карты стали бесценным источником объектов для карты моей кампании, а в сети Internet существуют и другие блоггеры, выкладывающие свои бесплатные карты подземелий для бесплатного скачивания. Подобный вид готовых мини-подземелий представляется мне идеальным образцом такого описания объекта, которое ещё не требует перемещения в отдельную папку и может быть включено в общий перечень гексов.
