--- a/src/content/posts/translations/alexandrian-hexcrawl-5.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5.mdx
@@ -1,5 +1,5 @@
 ---
-title: "#Теория — Александрийский Hexcrawl, ч.1"
+title: "#Теория — Александрийский Hexcrawl, ч.5: Поле зрения"
 description: "Перевод цикла статей Александриана про процедуру исследования гексов в третьей редакции D&D #alexandrian #hexcrawl #dnd3e #translate"
 date: 2023-09-18
 tags:
@@ -13,3 +13,44 @@ author: Justin Alexander
 translator: pnprpg.ru
 cover: ~assets/covers/the_alexandrian_splashes.jpg
 ---
+
+Представляю вам мою шпаргалку, помогающую понять насколько далеко может простираться поле зрения героев путешествующих в глуши. На практике, конечно, реальная обозримая дистанция может очень сильно различаться, в зависимости от рельефа, наличия/отсутсвия растительности, и прочих обстоятельств. Однако я всё равно нахожу эту шпаргалку полезной, в качестве точки отсчета и моего варианта реализации “Правила большого пальца”.
+Горизонт
+ Линия горизонта, как правило, отстоит на три мили от наблюдателя (при условии, что и наблюдатель и горизонт расположены на уровне моря).
+Соседние гексы
+Когда герои находятся в центре гекса, они как правило не в состоянии видеть содержимое соседних гексов. Однако, при некоторых условиях, объекты из соседних гексов могут быть заметны, в силу особенностей ландшафта.
+Горы
+В ясную погоду герои могут отчётливо видеть высокие горы в пределах шести гексов (75 миль) от себя.
+Влияние высот
+Реальная дистанция от героя-наблюдателя до видимой ему линии горизонта, в милях, равна квадратному корню высоты наблюдателя над уровнем моря умноженной в полтора раза ( √(выс. x 1.5) ). Всегда добавляете высоту позиции наблюдателя к значению в нижеприведённой таблице.
+Атмосфера
+ Загрязненный чем-либо (туманом, пылью, осадками и т.п) воздух может уменьшить обозримую дистанцию, и не позволить видеть даже объекты огромного размера далее трёх–пяти гексов.
+Таблица обозримой дистанции
+| Высота     | Горизонт         |
+|------------|------------------|
+| Полурослик | 2 мили           |
+| Человек    | 3 мили           |
+| 10 футов   | 4 мили           |
+| 25 футов   | 6 миль           |
+| 50 футов   | 9 миль           |
+| 100 футов  | 12 миль (1 гекс) |
+| 400 футов  | 24 мили (2 гекс) |
+| 1000 футов | 39 миль (3 гекс) |
+| 1500 футов | 48 миль (4 гекс) |
+| 2500 футов | 60 миль (5 гекс) |
+Максимальная дальность обнаружения небольшого объекта или (случайной) встречи
+| Ландшафт           | Дальность обнаружения |
+|--------------------|-----------------------|
+| Пустыня            | 6d6 x 20 футов        |
+| Пустыня, барханы   | 6d6 x 10 футов        |
+| Лес редкий         | 3d6 x 10 футов        |
+| Лес средней плотн. | 2d8 x 10 футов        |
+| Лес, бурелом       | 2d6 x 10 футов        |
+| Холмы, пологие     | 2d6 x 10 футов        |
+| Холмы, крутые      | 2d6 x 10 футов        |
+| Джунгли            | 2d6 x 10 футов        |
+| Торфянники         | 2d8 x 10 футов        |
+| Горы               | 4d10 x 10 футов       |
+| Степи              | 6d6 x 40 футов        |
+| Болота             | 6d6 x 10 футов        |
+| Тундра             | 6d6 x 20 футов        |
