--- a/src/content/posts/translations/alexandrian-hexcrawl-5.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5.mdx
@@ -11,7 +11,7 @@ tags:
   - D&D 3.5e
 author: Justin Alexander
 translator: pnprpg.ru
-cover: ~assets/covers/the_alexandrian_splashes.jpg
+cover: ~assets/covers/the_alexandrian_splashes.png
 ---
 
 Представляю вам мою шпаргалку, помогающую понять насколько далеко может простираться поле зрения героев путешествующих в глуши. На практике, конечно, реальная обозримая дистанция может очень сильно различаться, в зависимости от рельефа, наличия/отсутсвия растительности, и прочих обстоятельств. Однако я всё равно нахожу эту шпаргалку полезной, в качестве точки отсчета и моего варианта реализации “Правила большого пальца”.
